packages/noir/lib/src/ffi/native_asset_bindings.dart

// Generated @Native bindings from Noir's selected OpenTUI v0.5.1 declarations.
// Regenerate with: dart run ffigen --config ffigen_native_assets.yaml
// Do not edit manually.
// ignore_for_file: unused_element, unused_field

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
@ffi.DefaultAsset('package:noir/src/ffi/native_asset_bindings.dart')
library;

import 'dart:ffi' as ffi;

@ffi.Native<
  OpenTuiHandle Function(
    ffi.Uint32,
    ffi.Uint32,
    ffi.Uint8,
    ffi.Uint8,
    ffi.Pointer<ffi.Void>,
  )
>()
external int createRenderer(
  int width,
  int height,
  int bufferedDestinationKind,
  int remoteModeValue,
  ffi.Pointer<ffi.Void> feedPtr,
);

@ffi.Native<ffi.Void Function(OpenTuiHandle)>()
external void destroyRenderer(int renderer);

@ffi.Native<ffi.Uint8 Function(OpenTuiHandle, ffi.Bool)>()
external int render(int renderer, bool force);

@ffi.Native<OpenTuiHandle Function(OpenTuiHandle)>()
external int getNextBuffer(int renderer);

@ffi.Native<OpenTuiHandle Function(OpenTuiHandle)>()
external int getCurrentBuffer(int renderer);

@ffi.Native<ffi.Void Function(OpenTuiHandle, ffi.Uint32, ffi.Uint32)>()
external void resizeRenderer(int renderer, int width, int height);

@ffi.Native<ffi.Void Function(OpenTuiHandle, ffi.Pointer<ffi.Uint16>)>()
external void setBackgroundColor(int renderer, ffi.Pointer<ffi.Uint16> color);

@ffi.Native<ffi.Void Function(OpenTuiHandle)>()
external void clearTerminal(int renderer);

@ffi.Native<
  ffi.Bool Function(
    OpenTuiHandle,
    ffi.Uint8,
    ffi.Pointer<ffi.Uint8>,
    ffi.Uint32,
  )
>()
external bool copyToClipboardOSC52(
  int renderer,
  int target,
  ffi.Pointer<ffi.Uint8> text,
  int textLen,
);

@ffi.Native<ffi.Bool Function(OpenTuiHandle, ffi.Uint8)>()
external bool clearClipboardOSC52(int renderer, int target);

@ffi.Native<ffi.Uint32 Function(OpenTuiHandle)>()
external int getBufferWidth(int buffer);

@ffi.Native<ffi.Uint32 Function(OpenTuiHandle)>()
external int getBufferHeight(int buffer);

@ffi.Native<ffi.Void Function(OpenTuiHandle, ffi.Pointer<ffi.Uint16>)>()
external void bufferClear(int buffer, ffi.Pointer<ffi.Uint16> bg);

@ffi.Native<
  ffi.Void Function(
    OpenTuiHandle,
    ffi.Pointer<ffi.Uint8>,
    ffi.Uint32,
    ffi.Uint32,
    ffi.Uint32,
    ffi.Pointer<ffi.Uint16>,
    ffi.Pointer<ffi.Uint16>,
    ffi.Uint32,
  )
>()
external void bufferDrawText(
  int buffer,
  ffi.Pointer<ffi.Uint8> text,
  int textLen,
  int x,
  int y,
  ffi.Pointer<ffi.Uint16> fg,
  ffi.Pointer<ffi.Uint16> bg,
  int attributes,
);

@ffi.Native<
  ffi.Void Function(
    OpenTuiHandle,
    ffi.Uint32,
    ffi.Uint32,
    ffi.Uint32,
    ffi.Uint32,
    ffi.Pointer<ffi.Uint16>,
  )
>()
external void bufferFillRect(
  int buffer,
  int x,
  int y,
  int width,
  int height,
  ffi.Pointer<ffi.Uint16> bg,
);

@ffi.Native<
  ffi.Void Function(
    OpenTuiHandle,
    ffi.Int32,
    ffi.Int32,
    ffi.Uint32,
    ffi.Uint32,
    ffi.Pointer<ffi.Uint32>,
    ffi.Uint32,
    ffi.Pointer<ffi.Uint16>,
    ffi.Pointer<ffi.Uint16>,
    ffi.Pointer<ffi.Uint16>,
    ffi.Pointer<ffi.Uint8>,
    ffi.Uint32,
    ffi.Pointer<ffi.Uint8>,
    ffi.Uint32,
  )
>()
external void bufferDrawBox(
  int buffer,
  int x,
  int y,
  int width,
  int height,
  ffi.Pointer<ffi.Uint32> borderChars,
  int packedOptions,
  ffi.Pointer<ffi.Uint16> borderColor,
  ffi.Pointer<ffi.Uint16> backgroundColor,
  ffi.Pointer<ffi.Uint16> titleColor,
  ffi.Pointer<ffi.Uint8> title,
  int titleLen,
  ffi.Pointer<ffi.Uint8> bottomTitle,
  int bottomTitleLen,
);

@ffi.Native<ffi.Pointer<ffi.Uint32> Function(OpenTuiHandle)>()
external ffi.Pointer<ffi.Uint32> bufferGetCharPtr(int buffer);

@ffi.Native<ffi.Pointer<ffi.Uint16> Function(OpenTuiHandle)>()
external ffi.Pointer<ffi.Uint16> bufferGetFgPtr(int buffer);

@ffi.Native<ffi.Pointer<ffi.Uint16> Function(OpenTuiHandle)>()
external ffi.Pointer<ffi.Uint16> bufferGetBgPtr(int buffer);

@ffi.Native<ffi.Pointer<ffi.Uint32> Function(OpenTuiHandle)>()
external ffi.Pointer<ffi.Uint32> bufferGetAttributesPtr(int buffer);

@ffi.Native<ffi.Uint32 Function(OpenTuiHandle)>()
external int bufferGetRealCharSize(int buffer);

@ffi.Native<
  ffi.Uint32 Function(
    OpenTuiHandle,
    ffi.Pointer<ffi.Uint8>,
    ffi.Uint32,
    ffi.Bool,
  )
>()
external int bufferWriteResolvedChars(
  int buffer,
  ffi.Pointer<ffi.Uint8> output,
  int outputLen,
  bool addLineBreaks,
);

@ffi.Native<
  ffi.Void Function(
    OpenTuiHandle,
    ffi.Uint32,
    ffi.Uint32,
    ffi.Uint32,
    ffi.Pointer<ffi.Uint16>,
    ffi.Pointer<ffi.Uint16>,
    ffi.Uint32,
  )
>()
external void bufferSetCellWithAlphaBlending(
  int buffer,
  int x,
  int y,
  int character,
  ffi.Pointer<ffi.Uint16> fg,
  ffi.Pointer<ffi.Uint16> bg,
  int attributes,
);

@ffi.Native<
  ffi.Void Function(
    OpenTuiHandle,
    ffi.Int32,
    ffi.Int32,
    OpenTuiHandle,
    ffi.Uint32,
    ffi.Uint32,
    ffi.Uint32,
    ffi.Uint32,
  )
>()
external void drawFrameBuffer(
  int target,
  int destX,
  int destY,
  int frameBuffer,
  int sourceX,
  int sourceY,
  int sourceWidth,
  int sourceHeight,
);

@ffi.Native<ffi.Void Function(OpenTuiHandle, ffi.Uint32, ffi.Uint32)>()
external void bufferResize(int buffer, int width, int height);

/// Native clip and opacity stacks. Every native write funnel honours both
/// (buffer.zig validateAndIndex -> isPointInScissor, and getCurrentOpacity).
/// Exposed on the raw binding surface; Noir's own clip seam stays in Dart.
@ffi.Native<
  ffi.Void Function(OpenTuiHandle, ffi.Int32, ffi.Int32, ffi.Uint32, ffi.Uint32)
>()
external void bufferPushScissorRect(
  int buffer,
  int x,
  int y,
  int width,
  int height,
);

@ffi.Native<ffi.Void Function(OpenTuiHandle)>()
external void bufferPopScissorRect(int buffer);

@ffi.Native<ffi.Void Function(OpenTuiHandle)>()
external void bufferClearScissorRects(int buffer);

@ffi.Native<ffi.Void Function(OpenTuiHandle, ffi.Float)>()
external void bufferPushOpacity(int buffer, double opacity);

@ffi.Native<ffi.Void Function(OpenTuiHandle)>()
external void bufferPopOpacity(int buffer);

@ffi.Native<ffi.Void Function(OpenTuiHandle)>()
external void bufferClearOpacity(int buffer);

@ffi.Native<
  ffi.Uint8 Function(
    OpenTuiHandle,
    OpenTuiHandle,
    ffi.Pointer<ImageDrawOptions>,
  )
>()
external int bufferDrawImage(
  int buffer,
  int image,
  ffi.Pointer<ImageDrawOptions> options,
);

@ffi.Native<ffi.Void Function(OpenTuiHandle, ffi.Int32, ffi.Int32, ffi.Bool)>()
external void setCursorPosition(int renderer, int x, int y, bool visible);

@ffi.Native<ffi.Void Function(OpenTuiHandle, ffi.Pointer<CursorStyleOptions>)>()
external void setCursorStyleOptions(
  int renderer,
  ffi.Pointer<CursorStyleOptions> options,
);

@ffi.Native<ffi.Void Function(OpenTuiHandle, ffi.Bool)>()
external void enableMouse(int renderer, bool enableMovement);

@ffi.Native<ffi.Void Function(OpenTuiHandle)>()
external void disableMouse(int renderer);

@ffi.Native<ffi.Void Function(OpenTuiHandle, ffi.Uint8)>()
external void enableKittyKeyboard(int renderer, int flags);

@ffi.Native<ffi.Void Function(OpenTuiHandle)>()
external void disableKittyKeyboard(int renderer);

@ffi.Native<ffi.Void Function(OpenTuiHandle, ffi.Bool)>()
external void setupTerminal(int renderer, bool useAlternateScreen);

@ffi.Native<ffi.Void Function(OpenTuiHandle)>()
external void queryPixelResolution(int renderer);

@ffi.Native<
  ffi.Void Function(
    OpenTuiHandle,
    ffi.Int32,
    ffi.Int32,
    ffi.Uint32,
    ffi.Uint32,
    ffi.Uint32,
  )
>()
external void addToHitGrid(
  int renderer,
  int x,
  int y,
  int width,
  int height,
  int id,
);

@ffi.Native<ffi.Uint32 Function(OpenTuiHandle, ffi.Uint32, ffi.Uint32)>()
external int checkHit(int renderer, int x, int y);

@ffi.Native<
  ffi.Void Function(OpenTuiHandle, ffi.Pointer<ffi.Uint8>, ffi.Uint32)
>()
external void processCapabilityResponse(
  int renderer,
  ffi.Pointer<ffi.Uint8> response,
  int responseLen,
);

@ffi.Native<
  ffi.Uint32 Function(
    ffi.Pointer<ffi.Uint8>,
    ffi.Uint32,
    ffi.Pointer<OpenTuiHandle>,
  )
>()
external int imageDecode(
  ffi.Pointer<ffi.Uint8> data,
  int dataLen,
  ffi.Pointer<OpenTuiHandle> outHandle,
);

@ffi.Native<
  ffi.Uint32 Function(
    ffi.Pointer<ffi.Uint8>,
    ffi.Uint64,
    ffi.Uint32,
    ffi.Uint32,
    ffi.Uint32,
    ffi.Pointer<OpenTuiHandle>,
  )
>()
external int imageCreateFromRgba(
  ffi.Pointer<ffi.Uint8> pixels,
  int pixelsLen,
  int width,
  int height,
  int stride,
  ffi.Pointer<OpenTuiHandle> outHandle,
);

@ffi.Native<ffi.Void Function(OpenTuiHandle)>()
external void imageDestroy(int image);

@ffi.Native<ffi.Uint32 Function(OpenTuiHandle, ffi.Pointer<NativeImageInfo>)>()
external int imageGetInfo(int image, ffi.Pointer<NativeImageInfo> outInfo);

@ffi.Native<ffi.Uint32 Function(ffi.Pointer<ffi.Uint8>, ffi.Uint32)>()
external int linkAlloc(ffi.Pointer<ffi.Uint8> url, int urlLen);

@ffi.Native<
  ffi.Uint32 Function(ffi.Uint32, ffi.Pointer<ffi.Uint8>, ffi.Uint32)
>()
external int linkGetUrl(int id, ffi.Pointer<ffi.Uint8> out, int maxLen);

@ffi.Native<ffi.Uint32 Function(ffi.Uint32, ffi.Uint32)>()
external int attributesWithLink(int baseAttributes, int linkId);

@ffi.Native<ffi.Uint32 Function(ffi.Uint32)>()
external int attributesGetLinkId(int attributes);

/// mbstate_t is an opaque object to keep conversion state, during multibyte
/// stream conversions.  The content must not be referenced by user programs.
final class __mbstate_t extends ffi.Union {
  @ffi.Array.multi([128])
  external ffi.Array<ffi.Char> __mbstate8;

  /// for alignment
  @ffi.LongLong()
  external int _mbstateL;
}

final class CursorStyleOptions extends ffi.Struct {
  @ffi.Uint8()
  external int style;

  @ffi.Uint8()
  external int blinking;

  external ffi.Pointer<ffi.Uint16> color;

  @ffi.Uint8()
  external int cursor;
}

final class NativeImageInfo extends ffi.Struct {
  @ffi.Uint32()
  external int width;

  @ffi.Uint32()
  external int height;

  @ffi.Uint32()
  external int sourceWidth;

  @ffi.Uint32()
  external int sourceHeight;

  @ffi.Uint32()
  external int format;

  @ffi.Uint32()
  external int colorStatus;

  @ffi.Uint32()
  external int orientation;

  @ffi.Uint32()
  external int hasAlpha;
}

final class ImageDrawOptions extends ffi.Struct {
  @ffi.Int32()
  external int x;

  @ffi.Int32()
  external int y;

  @ffi.Uint32()
  external int width;

  @ffi.Uint32()
  external int height;

  @ffi.Uint32()
  external int pixelWidth;

  @ffi.Uint32()
  external int pixelHeight;

  @ffi.Uint32()
  external int sourceX;

  @ffi.Uint32()
  external int sourceY;

  @ffi.Uint32()
  external int sourceWidth;

  @ffi.Uint32()
  external int sourceHeight;

  @ffi.Uint32()
  external int protocol;
}

/// Noir-owned declaration of the canonical OpenTUI v0.5.1 exports selected by
/// this package. The source of truth is external/opentui/packages/core/src/zig/
/// lib.zig at ad9a818d7a9d73f3386e92a445d0feb4b395c69e.
typedef OpenTuiHandle = ffi.Uint32;
typedef DartOpenTuiHandle = int;
